# agents-protocol

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  REVIEW.md  patch_agents.py  patch_b5.py  patch_b6.py  patch_b7.py  patch_bridge.py  patch_channels.py  patch_channels_2.py  patch_channels_3.py  patch_channels_import_err.py  patch_cluster.py  patch_cluster_import.py  patch_cr.py  patch_cr_ws.py  patch_dlq.py  patch_extensions_import.py  patch_imports.py  patch_line_len_3.py  patch_line_length.py  patch_line_length2.py  patch_lint.py  patch_lint2.py  patch_lint3.py  patch_msg_broker.py  patch_msg_broker2.py  patch_msg_broker_copies.py  patch_msg_router.py  patch_mypy.py  patch_mypy2.py  patch_registries.py  patch_security.py  patch_tcp.py  plan.md  pyproject.toml  (+2 more)
.github/prompts/: plan-agentsProtocol.prompt.md
.github/workflows/: ci.yml  publish.yml
docs/: advanced_usage.md  clustering.md  extensions.md  persistence.md  resilience.md  security.md  troubleshooting.md
examples/: basic_usage.py  client_a_bridge.py  client_b_bridge.py  secure_communication.py
src/agents_protocol/: __init__.py  adapters.py  agents.py  bridge.py  channels.py  cluster.py  extensions.py  messaging.py  persistence.py  protocol.py  resilience.py  security.py  version.py
tests/: __init__.py  benchmark_priority.py  conftest.py  test_agents.py  test_bridge.py  test_cluster_resilience.py  test_clustering.py  test_extensions.py  test_http_pooling.py  test_messaging.py  test_persistence.py  test_protocol.py  test_resilience.py  test_security.py  test_tcp_channel.py
